# econ_stats

./: .gitignore  README.md  agent_configs.json  pyproject.toml  requirements.txt
src/econ_stats/: __init__.py
src/econ_stats/agents/: __init__.py  base.py  orchestrator.py  roles.py
src/econ_stats/data/: __init__.py  pipeline.py
ui/: app.py
