[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "econ-stats"
version = "0.1.0"
description = "Multi-agent quantitative macro research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "streamlit>=1.28",
  "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
